--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.1.1
   cloud_firestore: ^4.8.0
   fluttertoast: ^8.2.2
+  swipe: ^0.0.1
 
 dev_dependencies:
   flutter_test:
